# cpu

./: .gitignore  README.md  build.mill  build.sc  common.mill  common.sc  flake.nix  wave.fst.hier
configs/: CPU.json  CPUTestBench.json
cpu/src/CPU/: Bundles.scala  CPU.scala  Type.scala
cpu/src/TestBench/: AXI4VIP.scala  CPUTestBench.scala
cpuemu/: Cargo.toml  build.rs  build.rs.nouse
cpuemu/dependencies/: chisel  riscv-opcodes  rvdecoderdb
cpuemu/src/: bus.rs  device.rs  difftest.rs  dpi.rs  drive.rs  driver.rs  lib.rs  plusarg.rs
cpuemu/src/RefModule/: RefModule.rs  mod.rs  nemu.rs  spike_event.rs
cpuemu/src/bus/: mem.rs  mod.rs  uart.rs
cpuemu/src/ref_module/: mod.rs  nemu.rs  spike.rs
difftest/spike_interfaces/: spike_interfaces-config.cmake  spike_interfaces.cc  spike_interfaces.h  spike_interfaces_c.h
elaborator/src/: CPU.scala  CPUTestBench.scala
nix/: overlay.nix
nix/cpu/: cpu.nix  default.nix  dpi-lib.nix  run.nix  vcs.nix  verilated.nix
nix/cpu/scripts/: vcs-wrapper.sh
nix/patches/nemu/: add_config.patch
nix/patches/spike/: 0001-enforce-lanewise-order-for-unordered-reduce.patch  0002-disable-NaN-normalization.patch  0003-relax-vsew-vlmul-ELEN-check.patch
nix/pkgs/: libnemu.nix  libspike.nix
nix/test/: default.nix  nexus-am.nix  riscv-tests.nix  run.nix  test.nix
script/: run.py
spike_interfaces/: CMakeLists.txt  default.nix
trash/attribute/: FuOpType.scala  Uop.scala  aluUop.scala  bruUop.scala  csrUop.scala  divUop.scala  fenceUop.scala  jmpUop.scala  lduUop.scala  mouUop.scala  mulUop.scala  stuUop.scala
(+71 files in other folders)
