[package]
name = "cpuemu"
version = "0.1.0"
edition = "2021"

[dependencies]
svdpi = { version = "0.0.1" }
rand = "0.8"
num-traits = "0.2.19"
num-bigint = { version = "0.4.6", features = ["rand"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "ansi"] }
anyhow = "1.0.79"
xmas-elf = "0.9.1"
elf = "0.7.4"
hex = "0.4.3"

[features]
sv2023 = ["svdpi/sv2023"]
vpi = ["svdpi/vpi"]
trace = []
difftest = []
default = ["trace", "difftest", "sv2023", "vpi"]

[lib]
crate-type = ["staticlib"]